# mosze-2022-fengine

./: .gitignore  CMakeLists.txt  README.md  frames.json  players.json
.github/workflows/: build_run.yml
engine/: console.cpp  console.h  filehandler.h  game.h  helper.h  main.cpp  menu.h
engine/objects/: answer.h  frame.h  player.h
test/: test_main.cpp
